<resources>
    <string name="app_name">ForEverHungry</string>
    <string name="welcome_message">Welcome !!\nHow would you like to search for yummy food\n</string>
    <string name="search_options">Search Options</string>
    <string name="registration_message">\tWelcome to 4EverHungry.\nYummy food is a few clicks away !! :)\n</string>
    <string name="dominos_info">Dominos Pizza\n300 6th Avenue\nPittsburgh PA,15222\n412-288-8989\n</string>
    <string name="reviews">Review1\n\nReview2\n\nReview3\n\nReview4\n\nReview5\n\nReview6</string>

    <string-array name="cuisines">
        <item>Pizza</item>
        <item>American</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>Burgers</item>
        <item>Sandwiches</item>
        <item>Mexican</item>
        <item>Thai</item>
    </string-array>
    <string name="cuisine_prompt">ANY</string>
    <string name="rating_prompt">ANY</string>
    <string-array name="ratings">
        <item>>4.0</item>
        <item>3.1-4.0</item>
        <item>2.1-3.0</item>
        <item>1.1-2.0</item>
        <item>0.0-1.0</item>
    </string-array>
    <string-array name="saved_searches">
        <item>CMU_Thai</item>
        <item>Home_Italian</item>
        <item>Late_Night</item>
        <item>Misc</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="maxListings">15</string>

    <string name="username_input_hint">Username</string>
    <string name="password_input_hint">Password</string>
    <string name="email_input_hint">Email</string>
    <string name="confirm_password_input_hint">Re-enter password</string>
    <string name="name_input_hint">Name</string>
    <string name="login_button_label">Log in</string>
    <string name="register_button_label">Register</string>
    <string name="forgot_password_label"><u>Forgot password</u></string>
    <string name="create_account_button_label">Create account</string>
    <string name="logout">logout</string>


    <string name="login_help_instructions">Enter your username to recover your password</string>
    <string name="login_help_username_input_hint">Username</string>
    <string name="login_help_submit_button_label">Submit</string>
    <string name="login_help_login_again_button_label">Back to Login</string>
    <string name="login_help_submit_failed_unknown">Failed to request password reset, please try again</string>
    <string name="login_help_username_sent">Please check your email for instructions on how to access your account</string>
    <string name="login_invalid_credentials_toast">The username and password you entered don\'t match</string>
    <string name="login_failed_unknown_toast">Could not log in, please try again later</string>


    <string name="no_username_toast">Please enter your username</string>
    <string name="no_password_toast">Please enter your password</string>


    <plurals name="password_too_short_toast">
        <item quantity="one">Password must be at least %d character long</item>
        <item quantity="other">Password must be at least %d characters long</item>
    </plurals>


    <string name="username_taken_toast">Username is already taken, please choose a different one</string>
    <string name="reenter_password_toast">Please re-enter your password</string>
    <string name="mismatch_confirm_password_toast">Passwords don\'t match, please try again</string>
    <string name="no_email_toast">Please enter your email</string>
    <string name="invalid_email_toast">Email is invalid, please correct it and try again</string>
    <string name="email_taken_toast">Email is already taken, please reset your password instead</string>
    <string name="no_name_toast">Please enter your name</string>
    <string name="signup_failed_unknown_toast">Could not sign up, please try again later</string>

    <string name="input_search_name"> Enter search name</string>
    <string name="save_search_name">save</string>
    <string name="restaurantLabel">Restaurant</string> 
    <string name="addressLabel">Address</string> 
    <string name="descriptionLabel">Description</string>
    <string name="favoriteLabel">Favorite</string>
    <string name="detailsLabel">Details</string>
    <string name="directionsLabel">Directions</string>
    <string name="reportButtonText">Report</string>


    <string name="placeholderRestaurantName">Restaurant Name</string>
    <string name="placeholderAddress">address</string> 
    <string name="placeholderDescription">description</string>

    <string name="ServerIP">10.0.0.4</string>
    <string name="ServerPort">6666</string>






</resources>
