<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/login"
    android:visibility="visible">

    <EditText
        android:id="@+id/login_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LoginUI_EditText"
        android:hint="@string/username_input_hint" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LoginUI_EditText"
        android:layout_marginTop="@dimen/small_vertical_spacing"
        android:fontFamily="sans-serif"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <LinearLayout
        android:id="@+id/login_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_vertical_spacing">

        <Button
            android:id="@+id/login_button"
            style="@style/LoginUI_Button"
            android:layout_weight="0.5"
            android:text="@string/login_button_label" />

        <Button
            android:id="@+id/register_button"
            style="@style/LoginUI_Button"
            android:layout_marginLeft="@dimen/small_horizontal_spacing"
            android:layout_weight="0.5"
            android:text="@string/register_button_label" />
    </LinearLayout>

    <Button
        android:id="@+id/forgot_password_button"
        style="@style/LoginUI_HelpButton"
        android:layout_marginTop="@dimen/small_vertical_spacing"
        android:layout_marginBottom="@dimen/small_vertical_spacing"
        android:text="@string/forgot_password_label" />
</LinearLayout>
