<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"    >

    <EditText
        android:id="@+id/signup_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ParseLoginUI.EditText"
        android:hint="@string/username_input_hint"></EditText>

    <EditText
        android:id="@+id/signup_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ParseLoginUI.EditText"
        android:layout_marginTop="@dimen/small_vertical_spacing"
        android:fontFamily="sans-serif"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/signup_confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ParseLoginUI.EditText"
        android:layout_marginTop="@dimen/small_vertical_spacing"
        android:fontFamily="sans-serif"
        android:hint="@string/confirm_password_input_hint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

  <Button
        android:id="@+id/create_account"
        style="@style/ParseLoginUI.Button"
        android:layout_marginTop="@dimen/small_vertical_spacing"
        android:text="@string/create_account_button_label" />

</LinearLayout>
