<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="edu.cmu.foreverhungry.ui.welcome.WelcomePage"
    android:id="@+id/change_password_page"
    android:weightSum="1"
    android:background="@drawable/img10">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="331dp"
        android:layout_height="109dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp">

        <include
            layout="@layout/logo"
            android:id="@+id/appLogo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Change Password"
        android:id="@+id/change_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:textColor="#aac0cb"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.38"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/signup_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ParseLoginUI.EditText"
            android:layout_marginTop="@dimen/small_vertical_spacing"
            android:fontFamily="sans-serif"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/signup_confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ParseLoginUI.EditText"
            android:layout_marginTop="@dimen/small_vertical_spacing"
            android:fontFamily="sans-serif"
            android:hint="@string/confirm_password_input_hint"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/create_account"
            style="@style/ParseLoginUI.Button"
            android:layout_marginTop="60dp"
            android:text="@string/login_help_submit_button_label" />
    </LinearLayout>
</LinearLayout>
