<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.cmu.foreverhungry.ui.restaurant.DetailedView">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView4"
        android:textSize="@dimen/title_text_size"
        android:layout_marginTop="78dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/logo2"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="58dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resImage"
        android:src="@mipmap/dominos_logo"
        android:layout_alignTop="@+id/restaurantInfo"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resRatingImage"
        android:src="@drawable/stars_4_5"
        android:layout_below="@+id/resImage"
        android:layout_alignLeft="@+id/resImage"
        android:layout_alignStart="@+id/resImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dominos_info"
        android:id="@+id/restaurantInfo"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_below="@+id/imageView3"
        android:layout_toLeftOf="@+id/imageView3"
        android:layout_toStartOf="@+id/imageView3" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resRatingImage"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout6"
        android:background="#dfabf2">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView9"
            android:layout_below="@+id/restaurantInfo"
            android:layout_alignLeft="@+id/resRatingImage"
            android:layout_alignStart="@+id/resRatingImage"
            android:layout_marginLeft="20dp"
            android:src="@drawable/phone_icon"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_below="@+id/linearLayout6"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:background="#00ffffff"
        android:id="@+id/linearLayout5">



        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:fillViewport="true"
            android:layout_below="@+id/linearLayout6"
            android:clickable="true">
            <!--
                    android:scrollIndicators="right"
            -->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/outerReviewsLayout">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reviews"
                    android:id="@+id/textView16"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>


        </ScrollView>
    </LinearLayout>




</RelativeLayout>
